--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
-//header styling 
 header {
-  background-color: green;
-  height: 100pxmargin-bottom:30px;
-
+  background-color: #444;
+  height: 100px;
+  margin-bottom:30px;
+  margin-bottom: 30px;
+  width: 100%;
 }
 
 nav {
@@ -13,10 +14,25 @@ nav {
 
 header img {
   float: left;
-
+margin-top: 15px;
+padding-left: 50px;
 }
 
+header ul {
+  display: flex;
+  justify-content: space-evenly;
+  padding-left: 20px;
+  padding-right: 200px;
+}
 
+header ul li {
+margin-top: 40px;
+}
+
+a{
+  text-decoration: none;
+  color: #777;
+}
 
 main {
   width: 960px;
@@ -53,13 +69,22 @@ section div p {
 }
 
 section div div {
-  background-color: green;
-  color: green;
+  background-color: #000;
+  color: #fff;
   width: max-content;
   padding: 10px 30px;
   margin-top: 33px;
   transition: 350ms;
   font-size: 18px;
-  cursor: pointer;
   border-radius: 5px;
+  cursor: pointer;
+}
+
+section div div:hover {
+  background-color: green;
+}
+
+footer {
+  background-color: #444;
+  height: 150px;
 }
